--- a/PaysafeSDK/build.gradle
+++ b/PaysafeSDK/build.gradle
@@ -11,28 +11,27 @@ jar {
 	version = "1.0"
 }
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.8
 
 dependencies {
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.2.2+'
-	testCompile group: 'junit', name: 'junit', version: '4.+'
-	testCompile group: 'com.google.code.gson', name: 'gson', version: '2.2.2+'
-	checkstyle 'com.puppycrawl.tools:checkstyle:6.1'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.2.2+'
+	testImplementation group: 'junit', name: 'junit', version: '4.+'
+	testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.2.2+'
+	checkstyle 'com.puppycrawl.tools:checkstyle:8.10.1'
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.0'
+	gradleVersion = '7.3.3'
 }
 
 checkstyle {
 	ignoreFailures = true
 	sourceSets = [sourceSets.main]
+	configFile = rootProject.file('PaysafeSDK/config/checkstyle/checkstyle.xml')
 }
 
 test{
 	include "sdk/test/*"
-
-	reports.html.destination = "$buildDir/reports/tests/"
 }
 
 allprojects {
